[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyolxbr"
version = "0.1.0"
description = "Python client for OLX Brazil API"
authors = [{ name = "Lucas Belo", email = "lucas.belo@live.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0"
]
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "httpx>=0.27.0"
]

[project.urls]
Homepage = "https://github.com/lmbelo/PyOlxBr"
Repository = "https://github.com/lmbelo/PyOlxBr"
